feat(app, hadith, story/object): Implement creation hadith functionality
Implement Hadith creation functionality and add `POST /v1/story` handler to modify yaml. Also, create a function to add the new Hadith in the application.
