# internal/story/types/version.go
@@ -1,0 +1,8 @@
+package types
+
+type Version struct {
+	Original  string     `db:"original"`
+	BroughtID int64      `db:"brought_id"`
+	IsDefault bool       `db:"is_default"`
+	Version   Translates `db:"version"`
+}
